--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "cross-env NODE_ENV=development nodemon",
     "format": "prettier --write \"src/**/*.ts\"",
     "build": "rimraf dist && tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev-test": "jest --watch"
   },
   "author": "Constantine",
   "license": "MIT",
@@ -18,12 +19,17 @@
     "pg": "8.13.1"
   },
   "devDependencies": {
+    "@types/jest": "29.5.14",
     "@types/node": "22.12.0",
     "cross-env": "7.0.3",
     "fastify-tsconfig": "3.0.0",
+    "jest": "29.7.0",
+    "jest-mock": "29.7.0",
     "nodemon": "3.1.9",
     "prettier": "3.4.2",
     "rimraf": "5.0.7",
+    "supertest": "7.0.0",
+    "ts-jest": "29.2.5",
     "tsconfig-paths": "4.2.0",
     "typescript": "5.7.2"
   }
